fix: now header is fixed to the top of window on mobile devices

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -42,6 +42,7 @@
     display:none;
 }
 
+
 #reveal-menu:checked~.header-menu {
     display: flex;
     position: fixed;
@@ -55,7 +56,7 @@
   background: #64288c;
 }
 
- #reveal-menu:checked~ .nav-btn > label >.span-ham:nth-last-child(2){
+#reveal-menu:checked~ .nav-btn > label >.span-ham:nth-last-child(2){
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
@@ -65,23 +66,28 @@
 }
 
 
- .span-ham:first-child{
+.span-ham:first-child{
     transform-origin: 0% 0%;
-  }
+}
 
-  .span-ham:nth-last-child(2){
-      transform-origin: 0% 100%;
-  } 
+.span-ham:nth-last-child(2){
+    transform-origin: 0% 100%;
+} 
 
-  .nav-btn{
-    display: none;
+.nav-btn{
+   display: none;
 }
 
 
 
 @media (max-width:768px) {
     .header-container{
-       /*background-color: aliceblue;*/
+       background-color: aliceblue;
+       position: fixed;
+       top: 0;
+       width: 100%;
+       z-index: 100; 
+       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
     
 
@@ -96,7 +102,7 @@
         align-items: center;
         top:50px;
         left: 0px;
-        width: 100%;
+        width: 100vw;
         height: 100vh;
         transition: all 0.3s ease-in;
         background-color: aliceblue;
